--- a/package.json
+++ b/package.json
@@ -14,12 +14,10 @@
     "@types/leaflet": "^1.9.7",
     "@types/react-leaflet": "^3.0.0",
     "firebase": "^10.5.2",
-    "firebase-admin": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-leaflet": "^4.2.1",
-    "react-uuid": "^2.0.0",
-    "uuid": "^9.0.1"
+    "react-uuid": "^2.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
